fix multi scrollbar bug

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -37,7 +37,7 @@ a img:focus {
   cursor: zoom-in;
 }
 article {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 blockquote {
   color: #808080;
